# pedant

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  release-plz.toml
.github/actions/supply-chain-check/: action.yml  scan.sh
.github/workflows/: ci.yml  release-plz.yml
docs/: migrating-from-flat-cli.md
examples/: capability-detection.md  global-config.toml  pedant-claude-code-hook.md  pedant-skill.md  project-config.toml  supply-chain-check.md
pedant/: CHANGELOG.md  Cargo.toml
pedant-core/: CHANGELOG.md  Cargo.toml
pedant-core/src/: analysis_result.rs  capabilities.rs  check_config.rs  checks.rs  gate.rs  graph.rs  hash.rs  json_format.rs  lib.rs  lint.rs  pattern.rs  style.rs  violation.rs  workspace.rs
pedant-core/src/ir/: extract.rs  facts.rs  mod.rs  semantic.rs  type_introspection.rs
pedant-core/src/ir/semantic/: common.rs  concurrency.rs  context.rs  file_analysis.rs  function_summary.rs  mod.rs  perf.rs  quality.rs  reachability.rs  taint.rs
pedant-core/src/style/: common.rs  control_flow.rs  dyn_dispatch.rs  forbidden.rs  mixed_concerns.rs  mod.rs  naming.rs
pedant-core/tests/: capability.rs  config_discovery.rs  gate.rs  hash.rs  integration.rs  ir_extraction.rs  json_output.rs  pattern.rs  semantic.rs  smoke.rs  workspace_members.rs
pedant-core/tests/fixtures/: base58_key_material.rs  build_script_network.rs  build_script_process.rs  clean.rs  credential_material.rs  dyn_param.rs  else_chain.rs  ffi_capability.rs  hex_key_material.rs  high_param_count.rs  key_prefix_material.rs  let_underscore_result.rs  let_underscore_result_suppressed.rs  nested_match.rs  network_capability.rs  proc_macro_capability.rs  unsafe_capability.rs  vec_box_dyn.rs
pedant-core/tests/fixtures/dataflow_workspace/: Cargo.toml
pedant-core/tests/fixtures/dataflow_workspace/src/: lib.rs
pedant-core/tests/fixtures/semantic_workspace/: Cargo.toml
pedant-core/tests/fixtures/semantic_workspace/src/: lib.rs
pedant-lang/: CHANGELOG.md  Cargo.toml
pedant-lang/src/: bash.rs  go.rs  javascript.rs  lib.rs  manifest.rs  python.rs  string_analysis.rs  tree_sitter_ext.rs
pedant-lang/tests/: capability.rs  detection.rs
pedant-mcp/: CHANGELOG.md  Cargo.toml
pedant-mcp/src/: index.rs  lib.rs  main.rs  registry.rs  schema.rs  server.rs  watcher.rs
pedant-mcp/src/index/: config.rs  crate_index.rs  mod.rs  workspace.rs
pedant-mcp/src/tools/: duplicates.rs  explain.rs  mod.rs  query.rs
pedant-mcp/src/tools/query/: audit.rs  capabilities.rs  mod.rs  outputs.rs  scope.rs  search.rs  verdicts.rs  violations.rs
pedant-mcp/tests/: index.rs  integration.rs  tools.rs  watcher.rs
pedant-mcp/tests/fixtures/multi_crate/: Cargo.toml
pedant-mcp/tests/fixtures/multi_crate/lib-a/: Cargo.toml  build.rs  package.json
pedant-mcp/tests/fixtures/multi_crate/lib-a/scripts/: fetch_data.py
pedant-mcp/tests/fixtures/multi_crate/lib-a/src/: lib.rs  other.rs
pedant-mcp/tests/fixtures/multi_crate/lib-b/src/: lib.rs  nested.rs
pedant-mcp/tests/fixtures/multi_crate/lib-c/: Cargo.toml
pedant-mcp/tests/fixtures/multi_crate/lib-c/src/: lib.rs
pedant-types/: CHANGELOG.md  Cargo.toml  README.md
pedant-types/src/: attestation.rs  capability.rs  diff.rs  error.rs  execution_context.rs  finding.rs  finding_origin.rs  language.rs  lib.rs  profile.rs
pedant-types/tests/: serialization.rs
pedant/src/: analysis.rs  analysis_result.rs  capability_visitor.rs  checks.rs  command.rs  config.rs  explain.rs  hash.rs  json_format.rs  lib.rs  lint.rs  main.rs  output.rs  pattern.rs  reporter.rs  supply_chain.rs  violation.rs  visitor.rs
pedant/tests/: attestation.rs  capability.rs  common.rs  diff.rs  gate_cli.rs  integration.rs  json_output.rs  pattern.rs  supply_chain.rs
pedant/tests/fixtures/: clean.xyz  clone_in_loop.rs  crypto_capability.rs  default_hasher.rs  dyn_return.rs  endpoint_capability.rs  env_capability.rs  filesystem_capability.rs  forbidden_calls.rs  forbidden_keywords.rs  generic_naming.rs  if_in_match.rs  network_subprocess.py  process_capability.rs  runtime.js  system_time_capability.rs
pedant/tests/fixtures/makefile_project/: Makefile
pedant/tests/fixtures/npm_project/: package.json
src/: checks.rs  config.rs  lib.rs  main.rs  pattern.rs  reporter.rs  violation.rs  visitor.rs
tests/: integration.rs
tests/fixtures/: clone_in_loop.rs  deep_nesting.rs  dyn_field.rs  forbidden_attr.rs  forbidden_macros.rs  forbidden_types.rs  generic_naming.rs  inline_tests.rs  mixed_concerns.rs  mixed_concerns_body.rs  mixed_concerns_clean.rs  nested_if.rs
