[package]
name = "pedant"
version = "0.2.3"
edition = "2024"
rust-version = "1.85"
description = "An opinionated Rust linter, with special focus on AI-generated code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jostled-org/pedant"
readme = "README.md"
keywords = ["linter", "lint", "static-analysis", "ai", "code-quality"]

[[bin]]
name = "pedant"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "visit", "parsing"] }
clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
