[package]
name = "pedant-lang"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Multi-language capability detection for pedant"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jostled-org/pedant"

[features]
default = ["ts-python", "ts-javascript", "ts-typescript", "ts-go", "ts-bash"]
ts-python = ["dep:tree-sitter", "dep:tree-sitter-python"]
ts-javascript = ["dep:tree-sitter", "dep:tree-sitter-javascript"]
ts-typescript = ["dep:tree-sitter", "dep:tree-sitter-typescript"]
ts-go = ["dep:tree-sitter", "dep:tree-sitter-go"]
ts-bash = ["dep:tree-sitter", "dep:tree-sitter-bash"]

[dependencies]
pedant-types = { version = "0.10.0", path = "../pedant-types" }
tree-sitter = { version = "0.26", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
