[package]
name = "pedant-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server exposing pedant security and capability analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jostled-org/pedant"
readme = "../README.md"

[[bin]]
name = "pedant-mcp"
path = "src/main.rs"

[dependencies]
pedant-core = { version = "0.5.1", path = "../pedant-core" }
pedant-types = { version = "0.7.0", path = "../pedant-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
walkdir = "2"
thiserror = "2"
rmcp = { version = "1.2.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
notify = "7"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time"] }

[features]
default = []
semantic = ["pedant-core/semantic"]

[package.metadata.docs.rs]
targets = []
