[package]
name = "pedant-types"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Shared types for pedant capability analysis"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jostled-org/pedant"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
rustc-hash = "2"
