[package]
name = "pedant"
version = "0.18.1"
edition = "2024"
rust-version = "1.85"
description = "An opinionated Rust linter, with special focus on AI-generated code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jostled-org/pedant"
readme = "../README.md"
keywords = [
  "lint",
  "linter",
  "static-analysis",
  "code-quality",
  "developer-tools",
]
categories = ["development-tools", "development-tools::cargo-plugins"]

[[bin]]
name = "pedant"
path = "src/main.rs"

[dependencies]
pedant-core = { version = "0.11.1", path = "../pedant-core" }
pedant-lang = { version = "0.1.1", path = "../pedant-lang" }
pedant-types = { version = "0.10.1", path = "../pedant-types" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
toml = "0.8"

[features]
default = []
semantic = ["pedant-core/semantic"]

[dev-dependencies]
serde_json = "1"

[package.metadata.docs.rs]
# pedant is a CLI binary — the library API lives in pedant-core.
# See https://docs.rs/pedant-core for API documentation.
targets = []
